[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tehqeeq"
version = "2.0.0"
description = "Advanced Network Reconnaissance Tool - WHOIS, DNS, subdomains, port scan, tech detection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "TEHQEEQ Contributors" }
]
keywords = ["reconnaissance", "security", "whois", "dns", "subdomain", "port-scan", "recon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "python-whois>=0.8.0",
    "dnspython>=2.3.0",
    "requests>=2.28.0",
    "colorama>=0.4.6",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
pdf = ["reportlab>=4.0.7"]
nmap = ["python-nmap>=0.7.1"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
tehqeeq = "main:main"

[project.urls]
Repository = "https://github.com/slaiba123/tehqeeq"
Documentation = "https://github.com/slaiba123/tehqeeq#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]

[tool.setuptools.py-modules]
include = ["main", "utils", "config"]
